Castle Level Collision

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,7 +152,7 @@ Common=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -205,7 +205,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Forest
+LastLevel=/Game/Levels/Castle
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -219,26 +219,26 @@ SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprints/UI/Widgets/Pause.Pause
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/UI/Widgets/Settings
-MRUItem1=/Game/Levels/Forest
-MRUItem2=/Game/Blueprints/UI/Widgets/LoadLevelOffPause
-MRUItem3=/Game/Blueprints/UI/Widgets/Pause
-MRUItem4=/Game/Blueprints/UI/Textures/pause_menu
-MRUItem5=/Game/Levels/NewSewer
-MRUItem6=/Game/Player/ThirdPersonCharacter
-MRUItem7=/Game/Levels/PersistentLevel
-MRUItem8=/Game/Movies/Cutscene1
-MRUItem9=/Game/Blueprints/UI/Widgets/MainMenu
-MRUItem10=/Game/Materials/Mat_Bubble_Wand_Bunch_Inst
-MRUItem11=/Game/Materials/Mat_Bubble_Wand_Wheel_Inst
-MRUItem12=/Game/Materials/Mat_Bubble_Wand_Turtle_Inst
-MRUItem13=/Game/Materials/Mat_Bubble_Wand_Trio_Inst
-MRUItem14=/Game/Materials/Mat_Bubble_Wand_Sun_Inst
-MRUItem15=/Game/Materials/Mat_Bubble_Wand_Stack_Inst
-MRUItem16=/Game/Materials/Mat_Bubble_Wand_Fractal_Inst
-MRUItem17=/Game/Materials/Mat_Bubble_Wand_Flower_Inst
-MRUItem18=/Game/Materials/Mat_Bubble_Wand_Diamond_Inst
-MRUItem19=/Game/Materials/Mat_Bubble_Wand_Butterfly_Inst
+MRUItem0=/Game/Castle/Castle_Level/Castle_Level_MERGED
+MRUItem1=/Game/Levels/Castle
+MRUItem2=/Game/Blueprints/UI/Widgets/Pause
+MRUItem3=/Game/Blueprints/UI/Widgets/Settings
+MRUItem4=/Game/Levels/Forest
+MRUItem5=/Game/Blueprints/UI/Widgets/LoadLevelOffPause
+MRUItem6=/Game/Blueprints/UI/Textures/pause_menu
+MRUItem7=/Game/Levels/NewSewer
+MRUItem8=/Game/Player/ThirdPersonCharacter
+MRUItem9=/Game/Levels/PersistentLevel
+MRUItem10=/Game/Movies/Cutscene1
+MRUItem11=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem12=/Game/Materials/Mat_Bubble_Wand_Bunch_Inst
+MRUItem13=/Game/Materials/Mat_Bubble_Wand_Wheel_Inst
+MRUItem14=/Game/Materials/Mat_Bubble_Wand_Turtle_Inst
+MRUItem15=/Game/Materials/Mat_Bubble_Wand_Trio_Inst
+MRUItem16=/Game/Materials/Mat_Bubble_Wand_Sun_Inst
+MRUItem17=/Game/Materials/Mat_Bubble_Wand_Stack_Inst
+MRUItem18=/Game/Materials/Mat_Bubble_Wand_Fractal_Inst
+MRUItem19=/Game/Materials/Mat_Bubble_Wand_Flower_Inst
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -3735,7 +3735,7 @@ LoadLevelOffPause_C.Localization=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C=
@@ -3813,7 +3813,7 @@ BodySetup=
 BodySetupCore=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
 SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StaticMesh=
 MaterialParameterCollection="\"Object.Material.ScalarParameters\" \"Object.Material.ScalarParameters.ScalarParameters[1]\" \"Object.Material.ScalarParameters.ScalarParameters[2]\" "
 AnimGraphNode_SequencePlayer="\"Object.Settings.SyncGroup\" "
 AnimGraphNode_AssetPlayerBase="\"Object.Settings.SyncGroup\" "
@@ -4576,6 +4576,7 @@ None=======
 /Game/Geometry/Meshes/Mat_BubGrass_Inst.Mat_BubGrass_Inst=1
 /Game/Blueprints/UI/Textures/pause_menu.pause_menu=1
 /Game/Blueprints/UI/Widgets/LoadLevelOffPause.LoadLevelOffPause=1
+/Game/Castle/Castle_Level/Castle_Level_MERGED.Castle_Level_MERGED=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -4660,7 +4661,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../Serotopia2021/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia Game/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -6231,11 +6232,11 @@ WorldBrowser.TimeStamp=2021.02.09-23.59.37
 WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Levels/NewSewer
-MRUItem2=/Game/Levels/PersistentLevel
-MRUItem3=/Game/Levels/Bubbleopolis
-MRUItem4=/Game/Levels/Castle
+MRUItem0=/Game/Levels/Castle
+MRUItem1=/Game/Levels/Forest
+MRUItem2=/Game/Levels/NewSewer
+MRUItem3=/Game/Levels/PersistentLevel
+MRUItem4=/Game/Levels/Bubbleopolis
 MRUItem5=/Game/Levels/MainMenu
 MRUItem6=/Game/Levels/NewMap
 MRUItem7=/Game/Movies/CutsceneLvl2
@@ -6246,7 +6247,7 @@ MRUItem11=/Game/Levels/testYellow
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=PIE
+LastLogListing=LoadErrors
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
