--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,7 +152,7 @@ Common=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/BubbleopolisBPs
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -205,7 +205,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Bubbleopolis
+LastLevel=/Game/Levels/Castle
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -216,32 +216,28 @@ ToolbarOpenBPClass.CurrentViewType=0
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Movies/Cutscene1.Cutscene1
-OpenAssetsAtExit=/Game/Movies/Cutscene2.Cutscene2
-OpenAssetsAtExit=/Game/Movies/Cutscene3.Cutscene3
-OpenAssetsAtExit=/Game/Movies/Cutscene4.Cutscene4
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Bubbleopolis
-MRUItem1=/Game/Movies/CutsceneLvl4
-MRUItem2=/Game/Movies/CutsceneLvl3
-MRUItem3=/Game/Movies/CutsceneLvl1
-MRUItem4=/Game/Movies/Cutscene4
-MRUItem5=/Game/Movies/Cutscene3
-MRUItem6=/Game/Movies/Cutscene2
-MRUItem7=/Game/Movies/Cutscene1
-MRUItem8=/Game/Levels/PersistentLevel
-MRUItem9=/Game/Movies/Forest
-MRUItem10=/Game/Movies/Forest_Video
-MRUItem11=/Game/Levels/Forest
-MRUItem12=/Game/Movies/ForestCut
-MRUItem13=/Game/Movies/scene2source
-MRUItem14=/Game/Movies/CutsceneLvl2
-MRUItem15=/Game/Movies/MyPlayer2
-MRUItem16=/Game/Movies/MyPlayer2_Video
-MRUItem17=/Game/Blueprints/Pickups/SceneFinish_Actor
-MRUItem18=/Game/Sunflower/NewMaterial
-MRUItem19=/Game/Geometry/Meshes/Plants/ReactivePlant
+MRUItem0=/Game/Levels/Castle
+MRUItem1=/Game/Movies/Cutscene4
+MRUItem2=/Game/Movies/Cutscene3
+MRUItem3=/Game/Movies/Cutscene2
+MRUItem4=/Game/Movies/Cutscene1
+MRUItem5=/Game/Levels/Bubbleopolis
+MRUItem6=/Game/Movies/CutsceneLvl4
+MRUItem7=/Game/Movies/CutsceneLvl3
+MRUItem8=/Game/Movies/CutsceneLvl1
+MRUItem9=/Game/Levels/PersistentLevel
+MRUItem10=/Game/Movies/Forest
+MRUItem11=/Game/Movies/Forest_Video
+MRUItem12=/Game/Levels/Forest
+MRUItem13=/Game/Movies/ForestCut
+MRUItem14=/Game/Movies/scene2source
+MRUItem15=/Game/Movies/CutsceneLvl2
+MRUItem16=/Game/Movies/MyPlayer2
+MRUItem17=/Game/Movies/MyPlayer2_Video
+MRUItem18=/Game/Blueprints/Pickups/SceneFinish_Actor
+MRUItem19=/Game/Sunflower/NewMaterial
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -3959,6 +3955,47 @@ Cutscene4_C.Accessibility=True
 Cutscene4_C.Clipping=True
 Cutscene4_C.Navigation=True
 Cutscene4_C.Localization=True
+King_C.TransformCommon=True
+King_C.Animation=True
+King_C.Mesh=True
+King_C.Clothing=True
+King_C.Physics=True
+King_C.Collision=True
+King_C.MasterPoseComponent=True
+King_C.Lighting=True
+King_C.ClothingSimulation=True
+King_C.Rendering=True
+King_C.SkinWeights=True
+King_C.Navigation=True
+King_C.VirtualTexture=True
+King_C.Tags=True
+King_C.Activation=True
+King_C.Cooking=True
+King_C.Character Movement (General Settings)=True
+King_C.Character Movement: Walking=True
+King_C.Character Movement: Jumping / Falling=True
+King_C.Character Movement (Networking)=True
+King_C.Character Movement: Swimming=True
+King_C.Character Movement: Flying=True
+King_C.Character Movement: Custom Movement=True
+King_C.Character Movement (Rotation Settings)=True
+King_C.Character Movement: Physics Interaction=True
+King_C.Character Movement=True
+King_C.Character Movement: Avoidance=True
+King_C.RootMotion=True
+King_C.Character Movement: NavMesh Movement=True
+King_C.NavMovement=True
+King_C.Velocity=True
+King_C.PlanarMovement=True
+King_C.MovementComponent=True
+King_C.Shape=True
+King_C.Character=True
+King_C.Camera=True
+King_C.Pawn=True
+King_C.Replication=True
+King_C.Input=True
+King_C.Actor=True
+King_C.Materials=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
@@ -3967,9 +4004,9 @@ SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C=
 Character="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Character="\"Object.Default.Destinations\" \"Object.Default.BlackTextElliot\" \"Object.Default.BlackNPCText\" \"Object.Default.ColorTextElliot\" \"Object.Default.ColorNPCText\" \"Object.Character.Mesh.Object.Rendering.CustomPrimitiveData\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CapsuleComponent.Object.Rendering.CustomPrimitiveData\" \"Object.Actor.PivotOffset\" "
+Character="\"Object.Character.Mesh.Object.Rendering.CustomPrimitiveData\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CapsuleComponent.Object.Rendering.CustomPrimitiveData\" \"Object.Actor.PivotOffset\" "
 Pawn="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Pawn="\"Object.Default.Destinations\" \"Object.Default.BlackTextElliot\" \"Object.Default.BlackNPCText\" \"Object.Default.ColorTextElliot\" \"Object.Default.ColorNPCText\" \"Object.Character.Mesh.Object.Rendering.CustomPrimitiveData\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CapsuleComponent.Object.Rendering.CustomPrimitiveData\" \"Object.Actor.PivotOffset\" "
+Pawn="\"Object.Character.Mesh.Object.Rendering.CustomPrimitiveData\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CapsuleComponent.Object.Rendering.CustomPrimitiveData\" \"Object.Actor.PivotOffset\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Info=
@@ -4180,6 +4217,7 @@ HorizontalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\
 AI_C="\"Object.Default.TargetPoints\" \"Object.Character.Mesh.Object.Rendering.CustomPrimitiveData\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CapsuleComponent.Object.Rendering.CustomPrimitiveData\" \"Object.Actor.PivotOffset\" "
 Cutscene3_C="\"Object.MediaPlayer\" "
 Cutscene4_C=
+King_C="\"Object.Character.Mesh.Object.Rendering.CustomPrimitiveData\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CapsuleComponent.Object.Rendering.CustomPrimitiveData\" \"Object.Actor.PivotOffset\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -4811,6 +4849,7 @@ None=======
 /Game/Levels/PersistentLevel.PersistentLevel:PersistentLevel.PersistentLevel=1
 /Game/Movies/Cutscene3.Cutscene3=1
 /Game/Movies/CutsceneLvl4.CutsceneLvl4:PersistentLevel.CutsceneLvl4=1
+/Game/Movies/Cutscene4.Cutscene4=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -4895,7 +4934,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../Serotopia2021/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=../../../../../../Users/jedie/OneDrive/Documents/GitHub/Serotopia V3/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -6466,22 +6505,22 @@ WorldBrowser.TimeStamp=2021.02.09-23.59.37
 WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Bubbleopolis
-MRUItem1=/Game/Movies/CutsceneLvl4
-MRUItem2=/Game/Movies/CutsceneLvl3
-MRUItem3=/Game/Movies/CutsceneLvl1
-MRUItem4=/Game/Levels/PersistentLevel
-MRUItem5=/Game/Levels/Forest
-MRUItem6=/Game/Movies/CutsceneLvl2
-MRUItem7=/Game/Levels/NewSewer
-MRUItem8=/Game/Levels/NewMap
-MRUItem9=/Game/Levels/NewWorld
-MRUItem10=/Game/Levels/Castle
+MRUItem0=/Game/Levels/Castle
+MRUItem1=/Game/Levels/Bubbleopolis
+MRUItem2=/Game/Movies/CutsceneLvl4
+MRUItem3=/Game/Movies/CutsceneLvl3
+MRUItem4=/Game/Movies/CutsceneLvl1
+MRUItem5=/Game/Levels/PersistentLevel
+MRUItem6=/Game/Levels/Forest
+MRUItem7=/Game/Movies/CutsceneLvl2
+MRUItem8=/Game/Levels/NewSewer
+MRUItem9=/Game/Levels/NewMap
+MRUItem10=/Game/Levels/NewWorld
 MRUItem11=/Game/Levels/MainMenu
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=PIE
+LastLogListing=LoadErrors
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -6949,6 +6988,7 @@ MusicBP1_C=
 Cutscene4_C=
 Cutscene1_C=
 Cutscene3_C=
+King_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,TargetPoint.Rendering.LOD,Knight_C.Physics.ConstraintsGroup,Knight_C.Rendering.TextureStreaming,Knight_C.Rendering.LOD,StaticMeshActor.Rendering.LOD,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,
 
 [PlacementMode]
 RecentlyPlaced=/Game/MusicBP1.MusicBP1;
