--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,7 +152,7 @@ Common=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/BubbleopolisBPs
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -205,7 +205,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Castle
+LastLevel=/Game/Levels/Bubbleopolis
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -218,26 +218,26 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Castle
-MRUItem1=/Game/Movies/Cutscene4
-MRUItem2=/Game/Movies/Cutscene3
-MRUItem3=/Game/Movies/Cutscene2
-MRUItem4=/Game/Movies/Cutscene1
-MRUItem5=/Game/Levels/Bubbleopolis
-MRUItem6=/Game/Movies/CutsceneLvl4
-MRUItem7=/Game/Movies/CutsceneLvl3
-MRUItem8=/Game/Movies/CutsceneLvl1
-MRUItem9=/Game/Levels/PersistentLevel
-MRUItem10=/Game/Movies/Forest
-MRUItem11=/Game/Movies/Forest_Video
-MRUItem12=/Game/Levels/Forest
-MRUItem13=/Game/Movies/ForestCut
-MRUItem14=/Game/Movies/scene2source
-MRUItem15=/Game/Movies/CutsceneLvl2
-MRUItem16=/Game/Movies/MyPlayer2
-MRUItem17=/Game/Movies/MyPlayer2_Video
-MRUItem18=/Game/Blueprints/Pickups/SceneFinish_Actor
-MRUItem19=/Game/Sunflower/NewMaterial
+MRUItem0=/Game/BubbleopolisBPs/GreenKey
+MRUItem1=/Game/BubbleopolisBPs/M_Gascan
+MRUItem2=/Game/BubbleopolisBPs/BluePropeller
+MRUItem3=/Game/BubbleopolisBPs/gascan__1_
+MRUItem4=/Game/BubbleopolisBPs/RedGas
+MRUItem5=/Game/BubbleopolisBPs/YellowLightBulb
+MRUItem6=/Game/BubbleopolisBPs/M_Key
+MRUItem7=/Game/BubbleopolisBPs/key__1_
+MRUItem8=/Game/BubbleopolisBPs/propeller
+MRUItem9=/Game/BubbleopolisBPs/M_Propeller
+MRUItem10=/Game/BubbleopolisBPs/lightbulb
+MRUItem11=/Game/BubbleopolisBPs/M_Light_Bulb
+MRUItem12=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem13=/Game/BubbleopolisBPs/BlueCamera
+MRUItem14=/Game/BubbleopolisBPs/MagSoap
+MRUItem15=/Game/BubbleopolisBPs/lambert1
+MRUItem16=/Game/BubbleopolisBPs/soapBud
+MRUItem17=/Game/FloatingSoap
+MRUItem18=/Game/Levels/Bubbleopolis
+MRUItem19=/Game/Levels/Castle
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -4130,8 +4130,8 @@ PaperSprite="\"Object.Sprite.SourceUV\" "
 SoundCue="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
 SoundBase="\"Object.Voice Management.Voice Management|Concurrency\" \"Object.Voice Management.Voice Management|Priority\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" \"Object.ChannelNames\" "
-MaterialExpressionParameter="\"Object.DefaultValue\" "
-MaterialExpression="\"Object.DefaultValue\" "
+MaterialExpressionParameter="\"Object.DefaultValue\" \"Object.ChannelNames\" "
+MaterialExpression=
 MaterialEditorInstanceConstant=
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 NewSewer_C=
@@ -4850,6 +4850,17 @@ None=======
 /Game/Movies/Cutscene3.Cutscene3=1
 /Game/Movies/CutsceneLvl4.CutsceneLvl4:PersistentLevel.CutsceneLvl4=1
 /Game/Movies/Cutscene4.Cutscene4=1
+/Game/FloatingSoap.FloatingSoap=1
+/Game/BubbleopolisBPs/soapBud.soapBud=1
+/Game/BubbleopolisBPs/lightbulb.lightbulb=1
+/Game/BubbleopolisBPs/propeller.propeller=1
+/Game/BubbleopolisBPs/M_Key.M_Key=1
+/Game/BubbleopolisBPs/key__1_.key__1_=1
+/Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial=1
+/Game/BubbleopolisBPs/M_Light_Bulb.M_Light_Bulb=1
+/Game/BubbleopolisBPs/M_Propeller.M_Propeller=1
+/Game/BubbleopolisBPs/gascan__1_.gascan__1_=1
+/Game/BubbleopolisBPs/M_Gascan.M_Gascan=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -4913,7 +4924,7 @@ bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=624.000 Y=235.000
-ScreenPosition=X=214.000 Y=35.000
+ScreenPosition=X=226.000 Y=0.000
 WindowSize=X=1305.000 Y=745.000
 WindowSize=X=1655.000 Y=1019.000
 None=======
@@ -4934,7 +4945,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../../../Users/jedie/OneDrive/Documents/GitHub/Serotopia V3/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=C:/Users/Tay/Desktop/New_Sero_Git/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -6505,8 +6516,8 @@ WorldBrowser.TimeStamp=2021.02.09-23.59.37
 WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Castle
-MRUItem1=/Game/Levels/Bubbleopolis
+MRUItem0=/Game/Levels/Bubbleopolis
+MRUItem1=/Game/Levels/Castle
 MRUItem2=/Game/Movies/CutsceneLvl4
 MRUItem3=/Game/Movies/CutsceneLvl3
 MRUItem4=/Game/Movies/CutsceneLvl1
@@ -6835,7 +6846,7 @@ NiagaraSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSetti
 NiagaraEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,TargetPoint.Rendering.LOD,Knight_C.Physics.ConstraintsGroup,Knight_C.Rendering.TextureStreaming,Knight_C.Rendering.LOD,StaticMeshActor.Rendering.LOD,
 SteamVREditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,TargetPoint.Rendering.LOD,Knight_C.Physics.ConstraintsGroup,Knight_C.Rendering.TextureStreaming,Knight_C.Rendering.LOD,StaticMeshActor.Rendering.LOD,
 TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,TargetPoint.Rendering.LOD,Knight_C.Physics.ConstraintsGroup,Knight_C.Rendering.TextureStreaming,Knight_C.Rendering.LOD,StaticMeshActor.Rendering.LOD,
-StaticMeshComponent=StaticMeshComponent.Collision.Collision,
+StaticMeshComponent=
 SceneComponent=
 Drawbridge_Blueprint_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,
 CapsuleComponent=
@@ -7106,7 +7117,6 @@ None=======
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
-bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
