--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -153,7 +153,7 @@ Common=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/UI/Widgets
+ContentBrowserTab1.SelectedPaths=/Game/ParticleSystems
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -206,7 +206,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/PersistentLevel
+LastLevel=/Game/Levels/Forest
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -217,40 +217,28 @@ ToolbarOpenBPClass.CurrentViewType=0
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Castle/Door.Door
-OpenAssetsAtExit=/Game/BubGrowFlowers.BubGrowFlowers
-OpenAssetsAtExit=/Game/Player/ThirdPersonCharacter.ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Blueprints/Testing/disappear_cube_blueprint.disappear_cube_blueprint
-OpenAssetsAtExit=/Game/Castle/Fakedoor.Fakedoor
-OpenAssetsAtExit=/Game/Blueprints/AOE/Projectile/AO1E.AO1E
-OpenAssetsAtExit=/Game/Blueprints/Pickups/BluePaintPickup_Actor.BluePaintPickup_Actor
-OpenAssetsAtExit=/Game/Movies/Cutscene4.Cutscene4
-OpenAssetsAtExit=/Game/Movies/Cutscene5.Cutscene5
-OpenAssetsAtExit=/Game/Movies/Cutscene6.Cutscene6
-OpenAssetsAtExit=/Game/Blueprints/UI/Widgets/MainMenu.MainMenu
-OpenAssetsAtExit=/Game/Blueprints/UI/Widgets/Settings.Settings
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/UI/Widgets/Settings
-MRUItem1=/Game/Blueprints/UI/Widgets/MainMenu
-MRUItem2=/Game/Movies/Cutscene6
-MRUItem3=/Game/Movies/Cutscene4
-MRUItem4=/Game/Levels/PersistentLevel
-MRUItem5=/Game/Movies/Cutscene5
-MRUItem6=/Game/Levels/Castle
-MRUItem7=/Game/Levels/Bubbleopolis
-MRUItem8=/Game/Blueprints/Pickups/BluePaintPickup_Actor
-MRUItem9=/Game/Blueprints/AOE/Projectile/AO1E
-MRUItem10=/Game/Castle/Fakedoor
-MRUItem11=/Game/Blueprints/Testing/disappear_cube_blueprint
-MRUItem12=/Game/Player/ThirdPersonCharacter
-MRUItem13=/Game/BubGrowFlowers
-MRUItem14=/Game/Castle/Door
-MRUItem15=/Game/Movies/Credit
-MRUItem16=/Game/Movies/Credit_Video
-MRUItem17=/Game/Movies/FinalScenee_Video
-MRUItem18=/Game/Movies/NewMediaPlayer_Video
-MRUItem19=/Game/Movies/NewMediaPlayer1
+MRUItem0=/Game/ParticleSystems/A_Ripples
+MRUItem1=/Game/ParticleSystems/A_Splash
+MRUItem2=/Niagara/Modules/Update/Size/ScaleSpriteSize
+MRUItem3=/Niagara/Modules/Update/Forces/GravityForce
+MRUItem4=/Game/ParticleSystems/NS_Splash
+MRUItem5=/Game/ParticleSystems/NS_Ripples
+MRUItem6=/Game/Materials/Mat_Ripples
+MRUItem7=/Game/ParticleSystems/NE_Ripples
+MRUItem8=/Game/ParticleSystems/NS_WaterFall_Short
+MRUItem9=/Game/ParticleSystems/NS_WaterFall
+MRUItem10=/Game/ParticleSystems/NE_Waterfall
+MRUItem11=/Game/ParticleSystems/P_Waterfall
+MRUItem12=/Game/Materials/Mat_Waterfall
+MRUItem13=/Game/ParticleSystems/SM_WaterFall_L_Blueprint
+MRUItem14=/Game/Levels/Forest
+MRUItem15=/Game/Blueprints/UI/Widgets/Settings
+MRUItem16=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem17=/Game/Movies/Cutscene6
+MRUItem18=/Game/Movies/Cutscene5
+MRUItem19=/Game/Movies/Cutscene4
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -4421,10 +4409,36 @@ DataValidationSettings.Validation Scenarios=True
 GameplayTagsDeveloperSettings.GameplayTags=True
 LogVisualizerSettings.VisualLogger=True
 Castle_C.Default=True
+MaterialExpressionParticleColor.MaterialExpression=True
+MaterialExpressionDynamicParameter.MaterialExpressionDynamicParameter=True
+MaterialExpressionDynamicParameter.MaterialExpression=True
+ParticleModuleSubUVMovie.Flipbook=True
+ParticleModuleSubUVMovie.SubUV=True
+ParticleModuleSubUVMovie.Realtime=True
+ParticleModuleSubUVMovie.Cascade=True
+MaterialExpressionFloor.MaterialExpression=True
+NiagaraScript.Script=True
+NiagaraScript.NiagaraScript_InputParams=True
+NiagaraScript.NiagaraScript_OutputParams=True
+A_Splash_C.Tick=True
+A_Splash_C.Replication=True
+A_Splash_C.Rendering=True
+A_Splash_C.Collision=True
+A_Splash_C.Actor=True
+A_Splash_C.Input=True
+NiagaraComponent.Sockets=True
+NiagaraComponent.ComponentTick=True
+NiagaraComponent.Events=True
+A_Ripples_C.Tick=True
+A_Ripples_C.Replication=True
+A_Ripples_C.Rendering=True
+A_Ripples_C.Collision=True
+A_Ripples_C.Actor=True
+A_Ripples_C.Input=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C="\"Object.IsSaveActive\" "
@@ -4435,7 +4449,7 @@ Pawn="\"Object.IsSaveActive\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Info=
-Info="\"Object.Light.LightComponent.Object.Light.LightColor\" "
+Info="\"Object.Lightmass.LightmassSettings\" "
 None=======
 None=======
 None=======
@@ -4474,9 +4488,9 @@ GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Lighting.LightingChannels\" "
+SceneComponent="\"Object.Lighting.LightingChannels\" "
+ActorComponent="\"Object.Lighting.LightingChannels\" "
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Pen="\"Object.Settings\" "
 StaticMeshActor=
@@ -4610,7 +4624,7 @@ NiagaraComponent="\"Object.Lighting.LightingChannels\" "
 GeometryCollectionComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ParticleModuleSpawn="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
-ParticleModule="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
+ParticleModule="\"Object.Flipbook.FrameRate.Distribution\" \"Object.SubUV.SubImageIndex.Distribution\" "
 ParticleModuleAcceleration="\"Object.Acceleration.Acceleration\" \"Object.Acceleration.Acceleration.Distribution\" "
 ParticleModuleAccelerationBase="\"Object.Acceleration.Acceleration\" \"Object.Acceleration.Acceleration.Distribution\" "
 ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
@@ -4660,6 +4674,10 @@ SkeletalMeshEditorSettings="\"Object.AnimationPreview.AnimPreviewLightingDirecti
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.BuildPromotionTest.NewProjectSettings\" \"Object.Automation.MaterialEditorPromotionTest\" \"Object.Automation.ParticleEditorPromotionTest\" \"Object.Automation.BlueprintEditorPromotionTest\" \"Object.MiscAutomationSetups.TestLevelFolders\" "
+MaterialExpressionDynamicParameter="\"Object.ParamNames\" \"Object.DefaultValue\" "
+ParticleModuleSubUVMovie="\"Object.Flipbook.FrameRate.Distribution\" \"Object.SubUV.SubImageIndex.Distribution\" "
+ParticleModuleSubUV="\"Object.Flipbook.FrameRate.Distribution\" \"Object.SubUV.SubImageIndex.Distribution\" "
+ParticleModuleSubUVBase="\"Object.Flipbook.FrameRate.Distribution\" \"Object.SubUV.SubImageIndex.Distribution\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -5315,6 +5333,22 @@ None=======
 /Game/Door/Door.Door=1
 /Game/Door/M_Door.M_Door=1
 /Game/Movies/FinalScenee_Video.FinalScenee_Video=1
+/Game/ParticleSystems/P_Waterfall.P_Waterfall=1
+/Niagara/Modules/Update/Forces/GravityForce.GravityForce=1
+/Game/ParticleSystems/A_Ripples.A_Ripples=1
+/Game/ParticleSystems/A_Splash.A_Splash=1
+/Niagara/Modules/Update/Size/ScaleSpriteSize.ScaleSpriteSize=1
+/Game/ParticleSystems/NS_Ripples.NS_Ripples=1
+/Game/Materials/Mat_Ripples.Mat_Ripples=1
+/Game/ParticleSystems/NE_Ripples.NE_Ripples=1
+/Game/ParticleSystems/NS_WaterFall_Short.NS_WaterFall_Short=1
+/Game/ParticleSystems/NS_WaterFall.NS_WaterFall=1
+/Game/ParticleSystems/NE_Waterfall.NE_Waterfall=1
+/Game/Materials/Mat_Waterfall.Mat_Waterfall=1
+/Game/Castle/Door.Door=1
+/Game/Castle/Fakedoor.Fakedoor=1
+/Game/Movies/Cutscene5.Cutscene5=1
+/Game/Movies/Cutscene6.Cutscene6=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -5378,11 +5412,11 @@ bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=624.000 Y=235.000
-ScreenPosition=X=226.000 Y=0.000
+ScreenPosition=X=142.000 Y=20.000
 WindowSize=X=1305.000 Y=745.000
 WindowSize=X=1655.000 Y=1019.000
 None=======
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -5399,7 +5433,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../Serotopia2021/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=../../../../../../IG/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -6970,10 +7004,10 @@ WorldBrowser.TimeStamp=2021.02.09-23.59.37
 WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/PersistentLevel
-MRUItem1=/Game/Levels/Castle
-MRUItem2=/Game/Levels/Bubbleopolis
-MRUItem3=/Game/Levels/Forest
+MRUItem0=/Game/Levels/Forest
+MRUItem1=/Game/Levels/PersistentLevel
+MRUItem2=/Game/Levels/Castle
+MRUItem3=/Game/Levels/Bubbleopolis
 MRUItem4=/Game/Movies/CutsceneLvl6
 MRUItem5=/Game/Movies/CutsceneLvl5
 MRUItem6=/Game/Movies/CutsceneLvl4
@@ -7301,7 +7335,7 @@ NiagaraEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Inpu
 SteamVREditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,TargetPoint.Rendering.LOD,Knight_C.Physics.ConstraintsGroup,Knight_C.Rendering.TextureStreaming,Knight_C.Rendering.LOD,StaticMeshActor.Rendering.LOD,
 TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,TargetPoint.Rendering.LOD,Knight_C.Physics.ConstraintsGroup,Knight_C.Rendering.TextureStreaming,Knight_C.Rendering.LOD,StaticMeshActor.Rendering.LOD,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,StaticMeshActor.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,TargetPoint.Rendering.LOD,Knight_C.Physics.ConstraintsGroup,Knight_C.Rendering.TextureStreaming,Knight_C.Rendering.LOD,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,
-SceneComponent=
+SceneComponent=StaticMeshActor.Rendering.LOD,
 Drawbridge_Blueprint_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,
 CapsuleComponent=
 SkeletalMeshComponent=
@@ -7504,6 +7538,10 @@ LogVisualizerSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureR
 Cutscene5_C=
 
 [PlacementMode]
+RecentlyPlaced=/Game/ParticleSystems/NS_Splash.NS_Splash;
+RecentlyPlaced=/Game/ParticleSystems/NS_Ripples.NS_Ripples;
+RecentlyPlaced=/Game/ParticleSystems/NS_WaterFall_Short.NS_WaterFall_Short;
+RecentlyPlaced=/Game/ParticleSystems/NS_WaterFall.NS_WaterFall;
 RecentlyPlaced=/Game/Blueprints/Pickups/BluePaintPickup_Actor.BluePaintPickup_Actor;
 RecentlyPlaced=/Game/MusicBP2.MusicBP2;
 RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
@@ -7520,10 +7558,6 @@ RecentlyPlaced=/Game/Castle/Door.Door;
 RecentlyPlaced=/Game/Castle/Fakedoor.Fakedoor;
 RecentlyPlaced=/Game/BubbleTurbine/Turbine.Turbine;/Engine/Transient.ActorFactoryBlueprint_0
 RecentlyPlaced=/Game/MusicBP1.MusicBP1;
-RecentlyPlaced=/Game/MusicBP.MusicBP;
-RecentlyPlaced=/Game/Levers/UniqueSwitch3_Blueprint.UniqueSwitch3_Blueprint;
-RecentlyPlaced=/Game/Levers/BaseLever2_Blueprint.BaseLever2_Blueprint;
-RecentlyPlaced=/Game/Levers/LeverB.LeverB;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
@@ -7620,7 +7654,6 @@ None=======
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
-bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
